src/pages/project/style.css
.project-box{
    height: 41rem !important;
}

.planted-box{
    background-image: url("./planted-background.jpg");
    background-size: cover;
}
.planted-links, .levelup-links, .idunno-links{
    opacity: 0;
}
.planted-links:hover, .levelup-links:hover, .idunno-links:hover{
    opacity: 1 !important;
}
.levelup-box{
    background-image: url("./levelup-background.png");
    background-size: cover;
}
.idunno-box{
    background-image: url("./pickolascage.jpg");
    background-size: cover;
}

img {
    min-height: 2rem;
}

#home-link {
    position: absolute;
    left: 0rem;
    top: 0rem;
}

#link-list-projects{
    max-width: 100%;
    padding: 0;
    display: flex;
    justify-content: space-evenly;
    align-items:flex-start;
    flex-direction: row;
    margin: 0;
    position: relative;
    top: 2.5rem;
}

#project-box {
    width: 16rem;
    height: 32rem;
    margin: 0;
    color: var(--primary-light);
    background-color: var(--primary-dark);
    border-radius: 1.5rem;
    box-sizing: border-box;
    border: .75rem solid var(--primary-dark);
    cursor: pointer;
    padding: 0;
    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); 
    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
}
#project-title {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    padding: 1rem 0 1rem 0;
    border-radius: 0.5rem;
    width: 11rem;
    border: 2px solid var(--primary-light);
    background-color:rgba(82, 82, 82, 0.158);
    backdrop-filter: blur(20px);

}


/*** THIS IS CODE FOR THE LINKS THAT SHOW UP WHEN HOVERING ***/
/*************************************************************/
/**/#project-links{
/**/    background-color:rgba(82, 82, 82, 0.158);
/**/    backdrop-filter: blur(2px);
/**/    border: .75rem solid var(--primary-dark);
/**/    box-sizing: border-box;
/**/    display: flex;
/**/    flex-direction: column;
/**/    width: 16rem;
/**/    z-index: 10;
/**/    border-bottom-left-radius: 1.5rem;
/**/    border-bottom-right-radius: 1.5rem;
/**/    height: 15rem;
/**/    padding: .5rem 0 .5rem 0;
/**/    justify-content: space-evenly;
/**/    transition: all 300ms linear;
/**/    transition: visibility 0;
/**/}
/**/#link-group {
/**/    display: flex;
/**/    justify-content: space-evenly;
/**/    position: relative;
/**/    top: -12.5rem;
/**/}
/**/
/**/
/**/#link-button{
/**/    color: var(--primary-light);
/**/    cursor: pointer !important;
/**/    padding: 1rem 0 0.5rem 0;
/**/    font-size: 1.25rem;
/**/    position: relative;
/**/    bottom: 1rem;
/**/    left: 50%;
/**/    transform: translateX(-50%);
/**/    width: 8rem;
/**/    line-height: 2rem;
/**/    transition: all 300ms linear;
/**/    text-transform: uppercase;
/**/    --ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
/**/}
/**/#link-button::before,
/**/#link-button::after {
/**/    position: absolute;
/**/    content: "";
/**/    left: 0;
/**/    bottom: -0.1rem;
/**/    display: block;
/**/    width: 100%;
/**/    height: 2px;
/**/    background: var(--secondary);
/**/    transition: 1s var(--ease-out-expo);
/**/}
/**/#link-button::before {
/**/    transform: scaleX(0);
/**/    transform-origin: left;
/**/}
/**/#link-button::after{
/**/    transform-origin: right;
/**/    transition-delay: 0.25s;
/**/}
/**/#link-button:hover{
/**/    font-size: 1.35rem;
/**/    letter-spacing: 2px;
/**/}
/**/#link-button:hover::before {
/**/    transform: scaleX(1);
/**/    transition-delay: 0.25s;
/**/}
/**/#link-button:hover::after {
/**/    transform: scaleX(0);
/**/    transition-delay: 0s;
/**/}
/*************************************************************/
/*************************************************************/

#modal {
    transition: opacity 200ms ease !important;
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    height: 100%;
    width: 100%;
}

#modal-info {
    background-color: var(--primary-dark);
    color: var(--primary-light);
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 90%;
    width: 60rem;
    max-width: 100%;
    max-height: 100%;
    border-radius: 0.5rem;
}

#close-btn{
    position: absolute;
    top: 3%;
    right: 3%;
}
/* THIS CODE IS FOR ALL THE INFORMATION ON THE RESPECTIVE MODALS */
/*****************************************************************/
#levelup-title {
    text-align: center;
    font-size: 5rem;
    position: relative;
    left: 8%;
    top: 4rem;
    margin: 0;
    padding: 0;
    width:40%;
    line-height: 5rem;
    padding-bottom: 1.5rem;
    border-bottom: 5px solid var(--primary-light)
}
#levelup-sum {
    position: relative;
    font-size: 1.1rem;
    line-height: 2rem;
    top: 5rem;
    left: 8%;
    width: 40%;
    height: 50%;
    text-align:justify;
}
#levelup-tech {
    width: 37%;
    position: relative;
    left: 55%;
    top: -47%;
    font-size: 1.1rem;
    border: 2px solid var(--primary-light);
    border-radius: .5rem;
    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.5); 
    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.5);
}
#levelup-tech-title {
    padding-bottom: 0.5rem;
    border-bottom: 3px solid var(--primary-light);
    width: 12rem;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
}
#tech {
    text-align: left;
    line-height: 2rem;
    list-style-type: disc;
}
#levelup-link-group {
    position: relative;
    bottom: 38%;
    display: flex;
    justify-content: space-evenly;
}
#levelup-link {
    color: var(--primary-light);
    width: 13rem;
    font-size: 3rem;
    cursor: pointer;
    transition: letter-spacing 300ms linear;
    letter-spacing: 1px;
}
#levelup-link:hover,
#levelup-link:active {
    letter-spacing: 5px;
}
#levelup-link:after,
#levelup-link:before {
    backface-visibility: hidden;
    border: 1px solid rgba(255, 255, 255, 0);
    bottom: 0px;
    content: " ";
    display: block;
    margin: 0 auto;
    position: relative;
    transition: all 280ms ease-in-out;
    width: 0;
}
#levelup-link:hover:after,
#levelup-link:hover:before {
    backface-visibility: hidden;
    border-color: var(--secondary);
    transition: width 350ms ease-in-out;
    width: 90%;
}
#levelup-link:hover:before {
    bottom: auto;
    top: 0;
    width: 90%; 
}

/* @media screen and (max-width:1000px) {
    .project-box{
        min-width: 100% !important;
        max-width: 100% !important;
        width: 100% !important;
    }
} */
@media screen and (max-width:730px) {
    li{
        width: 100%;
        padding: 0;
    }
    .levelup-box {
        background-position: 1rem;
    }
    .levelup-links, .planted-links, .idunno-links {
        opacity: 1 !important;
    }
    #link-list-projects{
        margin: 0;
        padding: 10px;
        top: 0;
        flex-direction: column;
    }
    #project-box {
        height: 10rem;
        width: 100%;
        margin-bottom: 10px;
    }
    #modal-info{
        height: 100%;
        border-radius: 0;
    }
    #project-links{
        visibility: visible;
        opacity: 1;
        background: none;
        position: relative;
        border: 0;
        flex-direction: row !important;
        padding: 0;
        margin: 0;
        left: 0;
        height: auto;
        width: 100%;
        border-radius: 0;
        backdrop-filter: none;
    }
    #link-button{
        left: 0;
        padding: 0;
        margin: 4rem 1.5rem 4rem 1.5rem;
        bottom: 0;
        padding-bottom: 10px;
        height: 2rem;
        line-height: 2.5rem;
        border: 2px solid var(--primary-light);
        border-radius: 0.5rem;
        backdrop-filter: blur(20px);
        transform: translateX(0);
    }
    #project-title{
        margin: 8px 0 4px 0;
        padding: 0;
    }
    #link-group{
        width: 100%;
        flex-direction: column;
        top: -32rem;
    }
    #link-button::before,
    #link-button::after {
        background: none;
    }
    #link-button:hover{
        font-size: 1.25rem;
        letter-spacing: 1px;
    }


    /* CODE FOR MODALS WHEN IN MOBILE */
    #modal-info {
        height: 100%;
        width: 100%;
        overflow: scroll;
    }
    #levelup-title {
        padding: 1rem 1rem 2rem 1rem;
        margin: auto;
        top: 1rem;
        left: 0;
        width: 80% !important;
    }
    #levelup-sum {
        top: 3rem;
        left: 0;
        margin: auto;
        width: 90%;
    }
    #levelup-tech {
        top: 0rem !important;
        left: 0;
        margin: auto;
        width: 90%;

    }
    #levelup-link-group {
        top: 4rem;
        padding-bottom: 2rem;
    }
  }
@media screen and (max-width:800px) {
    #levelup-title{
        width: 45%;
    }
    #levelup-tech{
        top: -42%;
    }
}

